Source/WTF/wtf/SegmentedVector.h
@@ -188,6 +188,11 @@ namespace WTF {
         {
             return Iterator(*this, 0, SegmentSize);
         }
+        
+        void shrinkToFit()
+        {
+            m_segments.shrinkToFit();
+        }
 
     private:
         typedef Vector<T, SegmentSize> Segment;
